--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app"></div>
+    <script src="js/API.js"></script>
+  </body>
 </html>
