cambiando funcion con fetch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="app"></div>
     <script src="js/API.js"></script>
-    <img id="capterra" alt="" />
+    <img id="capterra" alt="./assets/capterra.png" />
   </body>
 </html>
